--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
     <li>B.A. (Education and Economics) from Institute Of Distance Education and Open Learning(Mumbai University)</li>
     <li>Higher Secondary from St. Xavier's Junior College of Sciencce and Commerce(Mumbai)</li>
     <li>Schooling - St. Peter's School(Mumbai)</li>
-    <li>- St. Francis Xavier's High School (Mumbai)</li>
+    <li>          - St. Francis Xavier's High School (Mumbai)</li>
+  </ul>
+  <hr>
+  <h3>Certifications</h3>
+  <ul>
+    <li>Currently pursuing online certification in Website Development from Udemy</li>
+    <li>Microsoft Certified Educator (MCE)</li>
+    <li>ABRSM Grade 5 Double Bass Guitar(Practical)</li>
+    <li>ABRSM Grade 5 Double Bass Guitar(Practical)</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
