--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <h3>Certifications</h3>
   <ul>
     <li>Currently pursuing online certification in Website Development from Udemy</li>
+    <li>Currently pursuing online certification in Teaching Popular Music from Berklee College of Music powered by Coursera</li>
     <li>Microsoft Certified Educator (MCE)</li>
     <li>ABRSM Grade 5 Double Bass Guitar(Practical)</li>
     <li>ABRSM Grade 5 Double Bass Guitar(Practical)</li>
@@ -142,7 +143,7 @@
             <td><strong>★★☆☆☆</strong></td>
           </tr>
           <tr>
-            <td>Sight Reading</td>
+            <td>Sight Singing</td>
             <td><strong>★☆☆☆☆</strong></td>
           </tr>
           <tr>
