--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <li>Currently pursuing online certification in Website Development from Udemy</li>
     <li>Currently pursuing online certification in Teaching Popular Music from Berklee College of Music powered by Coursera</li>
     <li>Microsoft Certified Educator (MCE)</li>
-    <li>ABRSM Grade 5 Double Bass Guitar(Practical)</li>
-    <li>ABRSM Grade 5 Double Bass Guitar(Practical)</li>
+    <li>ABRSM Grade 3 Double Bass Guitar(Practical/Aural/Sight Reading)</li>
+    <li>ABRSM Grade 1 Double Bass Guitar(Practical/Aural/Sight Reading)</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
