--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <tr>
         <td>April 2014 to present</td>
         <td>Music Teacher</td>
-        <td>Private Coach</td>
+        <td>Private Music Tutor</td>
       </tr>
       <tr>
         <td>April 2013 to April 2014</td>
@@ -69,7 +69,7 @@
       <tr>
         <td>September 2006 to December 2007</td>
         <td>Customer Service Representative</td>
-        <td>V2 Stream International Pvt. Ltd.</td>
+        <td>Stream International Pvt. Ltd.</td>
       </tr>
       <tr>
         <td>May 2005 to January 2006</td>
