--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <td>
         <table cellspacing="10">
           <tr>
-            <td>Desktop Computer Hardware Maintainence</td>
+            <td>Desktop Computer Hardware/Laptop Maintainence</td>
             <td><strong>★★★★☆</strong></td>
           </tr>
           <tr>
