--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="Me.png" alt="Alan's Profile Pic"></td>
       <td><h1>Alan Cardoz</h1>
-      <p><em>Musician/Music Educator/Researcher</em></p>
+      <p><em>Musician/Music Educator/Computer Technician/Researcher</em></p>
       <p>I am an electric bass guitar player from a place called Kanjur Marg in Mumbai, India. I have been performing with Mumbai based bands performing for weddings, coporates, hotels, socials, ect. I play covers of various genres ranging from pop,
         rock'n'roll, reggae, dance, etc. I have also taught school children to sing western songs as well as taught people of all ages to play guitar. Of late I have also started learning to play the keyboard and the <a href="https://www.youtube.com/watch?v=o-anokVTXpw">double bass guitar</a>. I have also
         developed a keen interest in online research on various subjects. I am also currently pursuing M.A. in Education from the Institute of Distance and Open Learning which is affiliated to Mumbai University</p></td>
