--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
     <li>M.A. (Education) - currently pursuing from Institute Of Distance Education and Open Learning(Mumbai University)</li>
     <li>B.A. (Education and Economics) from Institute Of Distance Education and Open Learning(Mumbai University)</li>
     <li>Higher Secondary from St. Xavier's Junior College of Sciencce and Commerce(Mumbai)</li>
-    <li>Schooling - St. Peter's School(Mumbai)</li>
-    <li>          - St. Francis Xavier's High School (Mumbai)</li>
+    <table>
+        <tr>
+          <td><li>Schooling:</li></td>
+          <td>- St. Peter's School (Mumbai)</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>- St. Francis Xavier's High School (Mumbai)</td>
+        </tr>
+    </table>
   </ul>
   <hr>
   <h3>Certifications</h3>
