--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <li>M.A. (Education) - currently pursuing from Institute Of Distance Education and Open Learning(Mumbai University)</li>
     <li>B.A. (Education and Economics) from Institute Of Distance Education and Open Learning(Mumbai University)</li>
     <li>Higher Secondary from St. Xavier's Junior College of Sciencce and Commerce(Mumbai)</li>
-    <table>
+    <li><table>
         <tr>
-          <td><li>Schooling:</li></td>
+          <td>Schooling:</td>
           <td>- St. Peter's School (Mumbai)</td>
         </tr>
         <tr>
           <td></td>
           <td>- St. Francis Xavier's High School (Mumbai)</td>
         </tr>
-    </table>
+    </table></li>
   </ul>
   <hr>
   <h3>Certifications</h3>
