--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Me.png" alt="Alan's Profile Pic"></td>
+      <td><img src="Me.png" alt="Alan's Profile Pic"> <style="width:50px; height:50px;">
+      </style></td>
       <td><h1>Alan Cardoz</h1>
       <p><em>Musician/Music Educator/Computer Technician/Researcher</em></p>
       <p>I am an electric bass guitar player from a place called Kanjur Marg in Mumbai, India. I have been performing with Mumbai based bands performing for weddings, coporates, hotels, socials, ect. I play covers of various genres ranging from pop,
