--- a/Get in touch with me.html
+++ b/Get in touch with me.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>My Contact Information</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>My Contact Information</h1>
     <p>📱 8898002526</p>
     <p>📧 alan_cardoz@yahoo.com</p>
+    <hr>
     <form action="alan_cardoz@yahoo.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
