--- a/Website Designing.html
+++ b/Website Designing.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Website Designing</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 <h3>Introduction</h3>
