--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>🎸 Alan's Personal Website</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Me.png" alt="Alan's Profile Pic"> <style="width:50px; height:50px;">
+      <td><img src="Me.png" alt="Alan's Profile Pic">
       </style></td>
       <td><h1>Alan Cardoz</h1>
       <p><em>Musician/Music Educator/Computer Technician/Researcher</em></p>
@@ -18,7 +19,7 @@
         developed a keen interest in online research on various subjects. I am also currently pursuing M.A. in Education from the Institute of Distance and Open Learning which is affiliated to Mumbai University</p></td>
     </tr>
   </table>
-    <hr>
+  <hr>
   <h3>Educational Background</h3>
   <ul>
     <li>M.A. (Education) - currently pursuing from Institute Of Distance Education and Open Learning(Mumbai University)</li>
@@ -34,7 +35,6 @@
           <td>- St. Francis Xavier's High School (Mumbai)</td>
         </tr>
     </table></li>
-  </ul>
   <hr>
   <h3>Certifications</h3>
   <ul>
