--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html lang="en" dir="ltr">
 
 <head>
@@ -11,12 +11,18 @@
   <table cellspacing="20">
     <tr>
       <td><img src="Me.png" alt="Alan's Profile Pic">
-      </style></td>
-      <td><h1>Alan Cardoz</h1>
-      <p><em>Musician/Music Educator/Computer Technician/Researcher</em></p>
-      <p>I am an electric bass guitar player from a place called Kanjur Marg in Mumbai, India. I have been performing with Mumbai based bands performing for weddings, coporates, hotels, socials, ect. I play covers of various genres ranging from pop,
-        rock'n'roll, reggae, dance, etc. I have also taught school children to sing western songs as well as taught people of all ages to play guitar. Of late I have also started learning to play the keyboard and the <a href="https://www.youtube.com/watch?v=o-anokVTXpw">double bass guitar</a>. I have also
-        developed a keen interest in online research on various subjects. I am also currently pursuing M.A. in Education from the Institute of Distance and Open Learning which is affiliated to Mumbai University</p></td>
+        </style>
+      </td>
+      <text class="blinking"></text>
+      <td>
+        <h1>Alan Cardoz</h1>
+        <p><em>Musician/Music Educator/Computer Technician/Researcher</em></p>
+        <p>I am an electric bass guitar player from a place called Kanjur Marg in Mumbai, India. I have been performing with Mumbai based bands performing for weddings, coporates, hotels, socials, ect. I play covers of various genres ranging from
+          pop,
+          rock'n'roll, reggae, dance, etc. I have also taught school children to sing western songs as well as taught people of all ages to play guitar. Of late I have also started learning to play the keyboard and the <a
+            href="https://www.youtube.com/watch?v=o-anokVTXpw">double bass guitar</a>. I have also
+          developed a keen interest in online research on various subjects. I am also currently pursuing M.A. in Education from the Institute of Distance and Open Learning which is affiliated to Mumbai University</p>
+      </td>
     </tr>
   </table>
   <hr>
@@ -25,7 +31,8 @@
     <li>M.A. (Education) - currently pursuing from Institute Of Distance Education and Open Learning(Mumbai University)</li>
     <li>B.A. (Education and Economics) from Institute Of Distance Education and Open Learning(Mumbai University)</li>
     <li>Higher Secondary from St. Xavier's Junior College of Sciencce and Commerce(Mumbai)</li>
-    <li><table>
+    <li>
+      <table>
         <tr>
           <td>Schooling:</td>
           <td>- St. Peter's School (Mumbai)</td>
@@ -34,7 +41,9 @@
           <td></td>
           <td>- St. Francis Xavier's High School (Mumbai)</td>
         </tr>
-    </table></li>
+      </table>
+    </li>
+  </ul>
   <hr>
   <h3>Certifications</h3>
   <ul>
