--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE>
 <html lang="en" dir="ltr">
 
 <head>
@@ -13,9 +12,8 @@
       <td><img src="Me.png" alt="Alan's Profile Pic">
         </style>
       </td>
-      <text class="blinking"></text>
       <td>
-        <h1>Alan Cardoz</h1>
+        <h1 class="blinking">Alan Cardoz</h1>
         <p><em>Musician/Music Educator/Computer Technician/Researcher</em></p>
         <p>I am an electric bass guitar player from a place called Kanjur Marg in Mumbai, India. I have been performing with Mumbai based bands performing for weddings, coporates, hotels, socials, ect. I play covers of various genres ranging from
           pop,
@@ -43,172 +41,171 @@
         </tr>
       </table>
     </li>
-  </ul>
-  <hr>
-  <h3>Certifications</h3>
-  <ul>
-    <li>Currently pursuing online certification in Website Development from Udemy</li>
-    <li>Currently pursuing online certification in Teaching Popular Music from Berklee College of Music powered by Coursera</li>
-    <li>Microsoft Certified Educator (MCE)</li>
-    <li>ABRSM Grade 3 Double Bass Guitar(Practical/Aural/Sight Reading)</li>
-    <li>ABRSM Grade 1 Double Bass Guitar(Practical/Aural/Sight Reading)</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Period</th>
-        <th>Title</th>
-        <th>Organisation/Company</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>April 2014 to present</td>
-        <td>Music Teacher</td>
-        <td>Private Music Tutor</td>
-      </tr>
-      <tr>
-        <td>April 2013 to April 2014</td>
-        <td>Team lead</td>
-        <td>V2 Solutions Pvt. Ltd.</td>
-      </tr>
-      <tr>
-        <td>June 2011 to April 2013</td>
-        <td>Content Quality Analyst</td>
-        <td>V2 Solutions Pvt. Ltd.</td>
-      </tr>
-      <tr>
-        <td>June 2008 to June 2011</td>
-        <td>Content Editor</td>
-        <td>V2 Solutions Pvt. Ltd.</td>
-      </tr>
-      <tr>
-        <td>September 2006 to December 2007</td>
-        <td>Customer Service Representative</td>
-        <td>Stream International Pvt. Ltd.</td>
-      </tr>
-      <tr>
-        <td>May 2005 to January 2006</td>
-        <td>Customer Service Representative</td>
-        <td>Godrej Upstream Ltd.</td>
-      </tr>
-      <tr>
-        <td>March 2004 to February 2005</td>
-        <td>Customer Care Consultant</td>
-        <td>Wipro Spectramind Pvt. Ltd.</td>
-      </tr>
-      <tr>
-        <td>December 2002 to February 2006</td>
-        <td>Network Engineer</td>
-        <td>Sysnet Communications</td>
-      </tr>
-      <tr>
-        <td>March 2002 to July 2002</td>
-        <td>Customer Support Engineer</td>
-        <td>Alphabetics Computer Systems Pvt. Ltd.</td>
-      </tr>
-      <tr>
-        <td>January 2001 to July 2001</td>
-        <td>Compaq Authorized ExtraMile Service Engineer</td>
-        <td>ITSource Pvt. Ltd.</td>
-      </tr>
-      <tr>
-        <td>May 1998 to June 2000</td>
-        <td>Customer Service Engineer</td>
-        <td>HCL Infosystems Ltd.</td>
-      </tr>
-      <tr>
-        <td>February 1998 to April 1998</td>
-        <td>Service Engineer</td>
-        <td>Computer Center</td>
-      </tr>
-      <tr>
-        <td>May 1997 to October 1997</td>
-        <td>Trainee Service Engineer</td>
-        <td>Ocean Computers</td>
-      </tr>
-    </tbody>
-    <tfoot>
+    <hr>
+    <h3>Certifications</h3>
+    <ul>
+      <li>Currently pursuing online certification in Website Development from Udemy</li>
+      <li>Currently pursuing online certification in Teaching Popular Music from Berklee College of Music powered by Coursera</li>
+      <li>Microsoft Certified Educator (MCE)</li>
+      <li>ABRSM Grade 3 Double Bass Guitar(Practical/Aural/Sight Reading)</li>
+      <li>ABRSM Grade 1 Double Bass Guitar(Practical/Aural/Sight Reading)</li>
+    </ul>
+    <hr>
+    <h3>Work Experience</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Period</th>
+          <th>Title</th>
+          <th>Organisation/Company</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>April 2014 to present</td>
+          <td>Music Teacher</td>
+          <td>Private Music Tutor</td>
+        </tr>
+        <tr>
+          <td>April 2013 to April 2014</td>
+          <td>Team lead</td>
+          <td>V2 Solutions Pvt. Ltd.</td>
+        </tr>
+        <tr>
+          <td>June 2011 to April 2013</td>
+          <td>Content Quality Analyst</td>
+          <td>V2 Solutions Pvt. Ltd.</td>
+        </tr>
+        <tr>
+          <td>June 2008 to June 2011</td>
+          <td>Content Editor</td>
+          <td>V2 Solutions Pvt. Ltd.</td>
+        </tr>
+        <tr>
+          <td>September 2006 to December 2007</td>
+          <td>Customer Service Representative</td>
+          <td>Stream International Pvt. Ltd.</td>
+        </tr>
+        <tr>
+          <td>May 2005 to January 2006</td>
+          <td>Customer Service Representative</td>
+          <td>Godrej Upstream Ltd.</td>
+        </tr>
+        <tr>
+          <td>March 2004 to February 2005</td>
+          <td>Customer Care Consultant</td>
+          <td>Wipro Spectramind Pvt. Ltd.</td>
+        </tr>
+        <tr>
+          <td>December 2002 to February 2006</td>
+          <td>Network Engineer</td>
+          <td>Sysnet Communications</td>
+        </tr>
+        <tr>
+          <td>March 2002 to July 2002</td>
+          <td>Customer Support Engineer</td>
+          <td>Alphabetics Computer Systems Pvt. Ltd.</td>
+        </tr>
+        <tr>
+          <td>January 2001 to July 2001</td>
+          <td>Compaq Authorized ExtraMile Service Engineer</td>
+          <td>ITSource Pvt. Ltd.</td>
+        </tr>
+        <tr>
+          <td>May 1998 to June 2000</td>
+          <td>Customer Service Engineer</td>
+          <td>HCL Infosystems Ltd.</td>
+        </tr>
+        <tr>
+          <td>February 1998 to April 1998</td>
+          <td>Service Engineer</td>
+          <td>Computer Center</td>
+        </tr>
+        <tr>
+          <td>May 1997 to October 1997</td>
+          <td>Trainee Service Engineer</td>
+          <td>Ocean Computers</td>
+        </tr>
+      </tbody>
+      <tfoot>
 
-    </tfoot>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table>
-    <tr>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Electric Bass Guitar</td>
-            <td><strong>★★★★☆</strong></td>
-          </tr>
-          <tr>
-            <td>Electric/Acoustic Guitar</td>
-            <td><strong>★★★★☆</strong></td>
-          </tr>
-          <tr>
-            <td>Electronic Keyboard</td>
-            <td><strong>★☆☆☆☆</strong></td>
-          </tr>
-          <tr>
-            <td>Double Bass Guitar</td>
-            <td><strong>★★☆☆☆</strong></td>
-          </tr>
-          <tr>
-            <td>Sight Reading</td>
-            <td><strong>★★☆☆☆</strong></td>
-          </tr>
-          <tr>
-            <td>Sight Singing</td>
-            <td><strong>★☆☆☆☆</strong></td>
-          </tr>
-          <tr>
-            <td>Harmonica (Mouth Organ)</td>
-            <td><strong>★☆☆☆☆</strong></td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Desktop Computer Hardware/Laptop Maintainence</td>
-            <td><strong>★★★★☆</strong></td>
-          </tr>
-          <tr>
-            <td>Online Research</td>
-            <td><strong>★★★★☆</strong></td>
-          </tr>
-          <tr>
-            <td>Microsoft Office</td>
-            <td><strong>★★☆☆☆</strong></td>
-          </tr>
-          <tr>
-            <td>Video Recording and Editing</td>
-            <td><strong>★☆☆☆☆</strong></td>
-          </tr>
-          <tr>
-            <td>HTML5</td>
-            <td><strong>★☆☆☆☆</strong></td>
-          </tr>
-          <tr>
-            <td>CSS3</td>
-            <td><strong>★☆☆☆☆</strong></td>
-          </tr>
-          <tr>
-            <td>JavaScript</td>
-            <td><strong>★☆☆☆☆</strong></td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+      </tfoot>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <td>
+          <table cellspacing="10">
+            <tr>
+              <td>Electric Bass Guitar</td>
+              <td><strong>★★★★☆</strong></td>
+            </tr>
+            <tr>
+              <td>Electric/Acoustic Guitar</td>
+              <td><strong>★★★★☆</strong></td>
+            </tr>
+            <tr>
+              <td>Electronic Keyboard</td>
+              <td><strong>★☆☆☆☆</strong></td>
+            </tr>
+            <tr>
+              <td>Double Bass Guitar</td>
+              <td><strong>★★☆☆☆</strong></td>
+            </tr>
+            <tr>
+              <td>Sight Reading</td>
+              <td><strong>★★☆☆☆</strong></td>
+            </tr>
+            <tr>
+              <td>Sight Singing</td>
+              <td><strong>★☆☆☆☆</strong></td>
+            </tr>
+            <tr>
+              <td>Harmonica (Mouth Organ)</td>
+              <td><strong>★☆☆☆☆</strong></td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <table cellspacing="10">
+            <tr>
+              <td>Desktop Computer Hardware/Laptop Maintainence</td>
+              <td><strong>★★★★☆</strong></td>
+            </tr>
+            <tr>
+              <td>Online Research</td>
+              <td><strong>★★★★☆</strong></td>
+            </tr>
+            <tr>
+              <td>Microsoft Office</td>
+              <td><strong>★★☆☆☆</strong></td>
+            </tr>
+            <tr>
+              <td>Video Recording and Editing</td>
+              <td><strong>★☆☆☆☆</strong></td>
+            </tr>
+            <tr>
+              <td>HTML5</td>
+              <td><strong>★☆☆☆☆</strong></td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td><strong>★☆☆☆☆</strong></td>
+            </tr>
+            <tr>
+              <td>JavaScript</td>
+              <td><strong>★☆☆☆☆</strong></td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
 
-  <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="Get in touch with me.html">Contact Me</a>
-  <a href="Website Designing.html">My Understanding of Website Designing</a>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="Get in touch with me.html">Contact Me</a>
+    <a href="Website Designing.html">My Understanding of Website Designing</a>
 </body>
 
 </html>
