--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <ul>
     <li>M.A. (Education) - currently pursuing from Institute Of Distance Education and Open Learning(Mumbai University)</li>
     <li>B.A. (Education and Economics) from Institute Of Distance Education and Open Learning(Mumbai University)</li>
-    <li>Higher Secondary from St. Xavier's Junior College of Sciencce and Commerce(Mumbai)</li>
+    <li>Higher Secondary from St. Xavier's Junior College of Science and Commerce(Mumbai)</li>
     <li>
       <table>
         <tr>
