--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h3>Certifications</h3>
   <ul>
     <li>Currently pursuing online certification in Website Development from Udemy</li>
-    <li>Currently pursuing online certification in Teaching Popular Music from Berklee College of Music powered by Coursera</li>
+    <li>Teaching Popular Music in the Classroom -an online non-credit course authorized by Berklee College of Music and offered through Coursera</li>
     <li>Microsoft Certified Educator (MCE)</li>
     <li>ABRSM Grade 3 Double Bass Guitar(Practical/Aural/Sight Reading)</li>
     <li>ABRSM Grade 1 Double Bass Guitar(Practical/Aural/Sight Reading)</li>
